# blog-automation

./: .env.template  .gitignore  CHANGELOG.md  README.md  pipeline.py  pyproject.toml  requirements-slack-approve.txt  requirements.txt  write_tournament.py
.cursor/rules/: changelog.mdc
.github/workflows/: publish.yml  slack_approve.yml  weekly.yml
config/: psai.peachtree.json  psai.tc.json
docs/: claude-api-migration-handoff.md  claude-migration-log.md  cloudflare-workers-setup.md  company-duplication-handoff.md  github-actions.md  multi-tenancy.md  slack-webhook-setup.md  tcroofing-cursor-handoff.md
feedback/peachtree/: style_notes.txt
feedback/tc/: style_notes.txt
prompts/: blog_explainer.txt  blog_geo.txt  blog_industry_insight.txt  blog_local_anchor.txt  blog_scenario.txt  evaluate.txt  evaluate_national_trade.txt  fact_audit.txt
scripts/: archive_ci_draft.py  ci-apt-packages.sh  classify_slack_event.py  create_writing_endpoint.sh  notify_slack_no_draft.py  process_slack_event.py  set_worker_github_token.sh  weekly_pipeline_plan.py  weekly_pipeline_record.py  write_with_endpoint.sh
src/blog_automation/: _pycache_prefix.py  claude_models.py  cli_progress.py  company.py  draft_approval.py  post.py  (+14 more)
tests/: test_claude_models.py  test_draft_pdf.py  test_draft_validation.py  test_generated_store.py  test_llm_client.py  test_pipeline_costs.py  test_pipeline_mention.py  test_psai_post_commands.py  test_search_relevance.py  test_slack_event_classifier.py  test_together_models.py  test_weekly_failure_slack.py  test_write_max_tokens.py  test_writing_prompts.py
(+24 files in other folders)
